fixed auth token getter, updated api file and added get balance
